[package]
name = "quake"
version = "0.1.0"
authors = ["Matthew Collins <thethinkofdeath@gmail.com>"]

[dependencies]
byteorder = "1.1.0"
cgmath = "0.15.0"
error-chain = "0.10.0"
# gfx = "0.16.1"
gfx = { git = "https://github.com/Thinkofname/gfx.git", branch = "quake-tmp-fix" }
# gfx_window_glutin = "0.17.0"
gfx_window_glutin = { git = "https://github.com/Thinkofname/gfx.git", branch = "quake-tmp-fix" }
glutin = "0.9.2"
env_logger = "0.4.3"