[package]
name = "quake"
version = "0.1.0"
authors = ["Matthew Collins <me@thinkof.name>"]
edition = "2018"

[features]
default = [ "vulkan" ]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
byteorder = "1.3.1"
cgmath = "0.17.0"
error-chain = "0.12.0"
winit = "0.18"
env_logger = "0.6.1"
shaderc = "0.5.0"
log = "0.4.6"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx.git"
rev = "3a851f28f1918d707b09a9e8368b65d7076bcebe"

[dependencies.gfx-backend-gl]
git = "https://github.com/gfx-rs/gfx.git"
rev = "3a851f28f1918d707b09a9e8368b65d7076bcebe"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx.git"
rev = "3a851f28f1918d707b09a9e8368b65d7076bcebe"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx.git"
rev = "3a851f28f1918d707b09a9e8368b65d7076bcebe"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
git = "https://github.com/gfx-rs/gfx.git"
rev = "3a851f28f1918d707b09a9e8368b65d7076bcebe"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx.git"
rev = "3a851f28f1918d707b09a9e8368b65d7076bcebe"
optional = true
