[package]
name = "quake"
version = "0.1.0"
authors = ["Matthew Collins <me@thinkof.name>"]
edition = "2018"

[features]
default = [ "vulkan" ]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
byteorder = "1.3.2"
cgmath = "0.17.0"
error-chain = "0.12.1"
winit = "0.19.1"
env_logger = "0.6.2"
shaderc = { version = "0.5.0", features = [ "build-from-source" ] }
log = "0.4.8"

[dependencies.gfx-hal]
version = "0.2.0"

[dependencies.gfx-backend-gl]
version = "0.2.0"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.2.0"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.2.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.2.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2.0"
optional = true